# automate_meetings

./: .gitignore  README.md
backend/: .env.example  bot.py  main.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AgentPanel.tsx  BotAudio.tsx  ConfigForm.tsx  MicSelector.tsx  Toast.tsx  TranscriptView.tsx
frontend/src/hooks/: useToast.ts
