[project]
name = "ai-meeting-delegate-backend"
version = "1.0.0"
description = "AI Meeting Delegate — Pipecat voice agent server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[silero,sarvam,openai,cerebras,cartesia]>=1.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
